--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="img/reddead.png" alt="Minha Foto" width="300">
 
     <p>
-        <a href="https://www.instagram.com/pietrohasper" target="">
+        <a href="https://www.instagram.com" target="">
             Siga-me no Instagram
         </a>
     </p>
@@ -21,3 +21,4 @@
     </p>
 </body>
 </html>
+
