--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Bem-vindo ao meu site!</h1>
 
-    <img src="img/reddead.png" alt="Minha Foto" width="300">
+    <img src="reddead.png" alt="Minha Foto" width="300">
 
     <p>
         <a href="https://www.instagram.com" target="">
@@ -21,4 +21,5 @@
     </p>
 </body>
 </html>
+
 
